--- a/assets/css/extension-variables.css
+++ b/assets/css/extension-variables.css
@@ -3,6 +3,7 @@
     --body-background:#193155b8;
     --app-background:#193155;
     --app-font-size:14px;
+    --app-font-size-small:12px;
 
     --color-primary:#1f65d6;
     --color-on-primary:#fff;
