--- a/assets/css/extension-ui.css
+++ b/assets/css/extension-ui.css
@@ -73,7 +73,7 @@ body.is-web .for-extension {display:none;}
  *********************************/
 .btn-block {width:100%;}
 .btn {
-    border-radius:4px; padding:10px 10px; min-height:40px;
+    border-radius:4px; padding:10px 10px; min-height:40px; font-size:var(--app-font-size);
     background:var(--color-secondary); color:#fff;
     box-shadow:rgb(116 129 141 / 10%) 0 1px 1px 0;
     transition:var(--transition); cursor:pointer;
